responsive changes and some filtering improvements

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
     <p class="seeMore">See all influencers</p>
   </div>
 
-  <div style="float: left; margin-top: 165px">
+  <div class="topTen" style="float: left; margin-top: 165px">
     <p class="titleLabel">Top 10 Most Followed</p>
     <div class="ranking" *ngFor="let influencer of influencersTopTen">
       <p class="name">@{{influencer.username}}<span style="display: block; font-size: 11px; color: #cdcdcd">{{influencer.fullName}}</span></p>
