--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
 .lateralMenu{
   float: left;
   width: 90px;
-  height: 100vh;
+  top: 0;
+  bottom: 0;
   position: fixed;
   box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.05);
   background-color: #fff;
