--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -162,7 +162,7 @@
 }
 
 .contentCardBigger{
-  width: 554px;
+  width: calc(50% - 51px);
   height: 314px;
   margin-right: 31px;
   margin-bottom: 20px;
@@ -171,4 +171,36 @@
   display: flex;
   align-items: center;
   box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.05);
+}
+@media(max-width: 1807px){
+  .contentCard{
+    width: calc(50% - 31px);
+    height: 140px;
+  }
+}
+
+@media(max-width: 1619px){
+  .contentCardBigger{
+    width: calc(100% - 62px);
+    height: 240px;
+  }
+}
+
+@media(max-width: 1365px){
+  .contentCard{
+    width: 100%;
+    height: 140px;
+  }
+}
+@media(max-width: 1280px){
+  .topTen{
+    display: none;
+  }
+  .container{
+    width: 100%;
+  }
+  .contentCard{
+    width: calc(50% - 31px);
+    height: 140px;
+  }
 }
