--- a/src/app/influencers/influencers.component.html
+++ b/src/app/influencers/influencers.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="dashboard-page">
+<div class="dashboard-page" (scroll)="onScroll()">
   <div class="container">
     <h2 class="titlePainel">Influencers</h2>
     <div class="filterBar">
