--- a/src/app/influencers/influencers.component.html
+++ b/src/app/influencers/influencers.component.html
@@ -5,21 +5,21 @@
     <h2 class="titlePainel">Influencers</h2>
     <div class="filterBarContainer">
       <div class="filterBar">
-        <tag-input placeholder="Enter more tags!" secondaryPlaceholder ="Enter a tag to filter!" class="filterBy" *ngIf="filter != 'Follower'" [(ngModel)]="filterInput"></tag-input>
-        <input type="number" class="filterHalf" *ngIf="filter == 'Follower'" placeholder="Min" [(ngModel)]="filterNumberMin">
-        <input type="number" class="filterHalf" *ngIf="filter == 'Follower'" placeholder="Max" [(ngModel)]="filterNumberMax">
+        <tag-input placeholder="Enter more tags!" secondaryPlaceholder ="Enter a tag to filter!" class="filterBy" *ngIf="filter != 'follower'" [(ngModel)]="filterInput"></tag-input>
+        <input type="number" class="filterHalf" *ngIf="filter == 'follower'" placeholder="Min" [(ngModel)]="filterNumberMin">
+        <input type="number" class="filterHalf" *ngIf="filter == 'follower'" placeholder="Max" [(ngModel)]="filterNumberMax">
         <div class="filterHolder">
           <p class="sortLabel">Filter by</p>
-          <select name="filter" class="filterInput" [(ngModel)]="filter"> 
-            <option value="Follower">Followers</option>
-            <option value="Keywords">Keywords</option>
-            <option value="Interests">Interests</option>
+          <select name="filter" class="filterInput" [(ngModel)]="filter">
+            <option value="follower">Followers</option>
+            <option value="keywords">Keywords</option>
+            <option value="interests">Interests</option>
           </select>
         </div>
       </div>
       <button class="applyFilter" (click)="applyFilters(filters)"></button>
     </div>
-    <div class="tags" (click)="removeFilter(tag.id)" *ngFor="let tag of filters">{{tag.type}}
+    <div class="tags" (click)="removeFilter(tag.id)" *ngFor="let tag of filters">{{tag.type | titlecase}}
       <div class="close-btn"></div>
     </div>
     <div class="titleHolder">
